--- a/php-7.4.4/php.ini
+++ b/php-7.4.4/php.ini
@@ -931,8 +931,8 @@ extension=pdo_mysql
 ;extension=pdo_sqlite
 ;extension=pgsql
 ;extension=shmop
-extension=php_igbinary  ; 3.1.2
-extension=php_redis     ; 5.2.1
+extension=igbinary  ; 3.1.2
+extension=redis     ; 5.2.1
 
 ; The MIBS data available in the PHP distribution must be installed.
 ; See http://www.php.net/manual/en/snmp.installation.php
